tests/generics/generic_stack.diag
generic_stack.ax:8:18: error: type mismatch: expected 23, found 3
